Tablet overflow fix again

--- a/style/home.css
+++ b/style/home.css
@@ -7,7 +7,9 @@ html,body{
 body{
     width: 100%;
 }
-
+.page-container{
+    overflow-x: none !important;
+}
 /*-------------------------------------
 LANDING PAGE DESIGN
 -------------------------------------*/
